[package]
name = "brakes"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.216", features = ["derive"] }
memcache = { version = "0.18.0", optional = true }
actix-web = { version = "4", optional = true }
futures-util = { version = "0.3.31", optional = true }
tower = { version = "0.5.2", optional = true }
http = { version = "1.2.0", optional = true }
futures = { version = "0.3.31", optional = true }
redis = { package = "redis", version = "0.27.6", optional = true, features = [
    "r2d2",
] }
r2d2 = { version = "0.8.10", optional = true }
log = "0.4.22"

[features]
memcache = ["dep:memcache"]
redis = ["dep:redis", "dep:r2d2"]
actixweb = ["dep:actix-web", "dep:futures-util"]
tower = ["dep:tower", "dep:http", "dep:futures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
